--- a/librespeed/compose.yaml
+++ b/librespeed/compose.yaml
@@ -7,17 +7,20 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
-      - PASSWORD=PASSWORD
-      - CUSTOM_RESULTS=false #optional
-      - DB_TYPE=sqlite #optional
-      - DB_NAME=DB_NAME #optional
-      - DB_HOSTNAME=DB_HOSTNAME #optional
-      - DB_USERNAME=DB_USERNAME #optional
-      - DB_PASSWORD=DB_PASSWORD #optional
-      - DB_PORT=DB_PORT #optional
-      - IPINFO_APIKEY=ACCESS_TOKEN #optional
+      - PASSWORD=g1o1k1u1
+      #- DB_HOSTNAME=DB_HOSTNAME #optional
+      #- DB_USERNAME=DB_USERNAME #optional
+      #- DB_PASSWORD=DB_PASSWORD #optional
+      #- DB_PORT=DB_PORT #optional
+      #- IPINFO_APIKEY=ACCESS_TOKEN #optional
     volumes:
-      - /path/to/librespeed/config:/config
+      - /docker_data/librespeed/config:/config
     ports:
-      - 80:80
+      - 30080:80
+    networks:
+      - shared_bridge_1
     restart: unless-stopped
+
+networks:
+  shared_bridge_1:
+    external: true
