--- a/prometheus/compose.yaml
+++ b/prometheus/compose.yaml
@@ -1,12 +1,19 @@
 ---
 services:
   prometheus:
-    image: docker.io/prom/prometheus:v3.2.1
+    image: docker.io/prom/prometheus:latest
     container_name: prometheus
     ports:
-      - 9090:9090
+      - 9091:9090
     command: "--config.file=/etc/prometheus/prometheus.yaml"
     volumes:
-      - /docker_data/config/prometheus.yaml:/etc/prometheus/prometheus.yaml:ro
+      - /docker_data/prometheus/config/prometheus.yaml:/etc/prometheus/prometheus.yaml:ro
       - /docker_data/prometheus:/prometheus
+    user: "1000:1000"
+    networks:
+      - shared_bridge_1
     restart: unless-stopped
+
+networks:
+  shared_bridge_1:
+    external: true
